# nekonet

./: Cargo.toml  READme.md
.VSCodeCounter/2023-10-03_02-00-15/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-10-04_16-47-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
examples/: mnist.rs
src/: data_util.rs  graph.rs  layer.rs  lib.rs  main.rs  optimizer.rs  tensor.rs
src/dev/: tensor.rs
src/layer/: activation.rs  criterion.rs
src/tensor/: activation.rs  layer.rs  operation.rs  tensor_func.rs  types.rs  util.rs
src/tensor/tensor_func/: basic.rs  compound.rs
tests/: test_activation.rs  test_activations.rs  test_criterion.rs  test_layer.rs  test_layers.rs  test_operation.rs  test_operations.rs  test_optimizer.rs  test_tensor.rs
