[package]
name = "nekonet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
hashbrown = "0.14.1"
itertools = "0.11.0"
ndarray = "0.15.6"
rand = "0.8.5"

[dev-dependencies]
mnist = "0.5.0"
